local works; fixed top spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,3 +19,8 @@
     padding-top:30px;
     padding-bottom:15px;
  }
+
+ .top {
+     padding-top:15px;
+     padding-bottom:15px;
+  }
